--- a/src/app/pages/customer-service/policy-renewals/components/policy-renewals/policy-renewals.component.scss
+++ b/src/app/pages/customer-service/policy-renewals/components/policy-renewals/policy-renewals.component.scss
@@ -61,16 +61,23 @@ mat-drawer-content {
   align-items: flex-end;
 }
 
+
+mat-drawer-content {
+  padding: 12px;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-end;
+}
+
 ::ng-deep .mat-drawer-content {
   overflow-x: hidden;
   overflow-y: auto;
 }
-
 ::ng-deep .mat-dialog-container {
   overflow-y: hidden !important;
 }
 
 .drag-boundary {
-  width: 1800px;
+  width: 75w;
   max-width: 100%;
 }
